--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-  <head>
-    <script src="p5.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-    <title>Analog Clock</title>
-  </head>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<title>Analog Clock</title>
+</head>
   <body>
     <script src="sketch.js"></script>
   
-
+<script src="p5.js"></script>
+<script src="p5.dom.min.js"></script>
+<script src="p5.sound.min.js"></script>
 </body>
 </html>
